[package]
name = "protocols-rs"
version = "0.1.0"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
anyhow = "1.0"
futures = "0.3"
rand = "0.7"
sled = "0.34"
serde_cbor = "0.11"
smallvec = { version = "1.4", features = ["serde"] }
async-trait = "0.1"
vec-collections = { version = "0.3", features = ["total"] }